feat: Add local images to 'Nuestros Trabajos' section

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="group relative overflow-hidden aspect-square">
                     <img alt="Cortina comercial microperforada"
                         class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="https://lh3.googleusercontent.com/aida-public/AB6AXuCjqsQxiVNTT9U1Rqq3C9DCF7TdxrnlGauzOjpJeNcLIL49FzfMWhIzyUZSmqDi94gJeyPDAEE1w-vwdMl5LR-5FyMH3rXykgwqhsyXFZ2c9lm_GytMngza0UfloXVgRzYXckutcuca15BgXM5_HzrGvnyOxhqIvSzW7SUEuNbMN1vOzrWvrQWxuGlnp4QGWHJ4cl_sHbPJhXJOzc4bwxigrOmakkpWo2pZP9Ih3_eNGKmuaRFMI5ifXf4RA0iWjD6Al8Vr3ttiO-g" />
+                        src="/images/trabajos/proyecto-1.jpeg" />
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
                     </div>
                     <div
@@ -220,7 +220,7 @@
                 <div class="group relative overflow-hidden aspect-square">
                     <img alt="Cortina industrial pesada"
                         class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="https://lh3.googleusercontent.com/aida-public/AB6AXuDJp5VVgkrJETDRyF2oJkVMRPiO6gwPLfxvHViXqxAhphMgACZZnBVZZTSpyb7N-zKuZvv3-asiyuCEpC2EH7PVPOBPFVlhXrJmIUdx0Eh7IDCFCLvkHkq13nVz5apox_CNEdL9ynW815WWPeS5g3H2wgzrNdFTlRWwsKqdcOl0HZWggilNisTUz4tB4sW9nfDyXSgqyVE2RtNEhIXQ_-ObfRwZJqYxfZ9jcg7OdI8Wt_pGwlKZdfENPronO9TMZl9T8AekWocV_p4" />
+                        src="/images/trabajos/proyecto-2.jpeg" />
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
                     </div>
                     <div
@@ -232,7 +232,7 @@
                 <div class="group relative overflow-hidden aspect-square">
                     <img alt="Automatización de persiana"
                         class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="https://lh3.googleusercontent.com/aida-public/AB6AXuAFRHP8bcuXjCulS0v4EdSF4erweQbKL6Jb1BTaqpzJPK9F0LY5rAzAqbP30uG9J1MuixIb8spRpr0VooKl2EbnyxL0W3fQaYDr3J2SvDk5ZwSHjcN0jleDEUzWYxL4-YUM_ZncxGmkXdERQP-xJpIWFTcJaDS2WZkaWCZBtokUXwbMZfSgRJdya68Uc12_rMrZ-16AFVolsbwbiimyeV7T48tyLhvtvaf0RRc3GLt5tcc_ZHY3nWdvZj4Si60yoryo-rgdWURpC9s" />
+                        src="/images/trabajos/proyecto-3.jpeg" />
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
                     </div>
                     <div
