feat: Replace static projects grid with an infinite looping carousel

--- a/index.html
+++ b/index.html
@@ -204,42 +204,10 @@
                     </button>
                 </div>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="group relative overflow-hidden aspect-square">
-                    <img alt="Cortina comercial microperforada"
-                        class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="/images/trabajos/proyecto-1.jpeg" />
-                    <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
-                    </div>
-                    <div
-                        class="absolute bottom-0 left-0 p-8 transform translate-y-4 group-hover:translate-y-0 transition-transform">
-                        <span class="text-primary text-xs font-bold uppercase tracking-widest">Comercial</span>
-                        <h4 class="text-xl font-black uppercase mt-1">Local Microcentro</h4>
-                    </div>
-                </div>
-                <div class="group relative overflow-hidden aspect-square">
-                    <img alt="Cortina industrial pesada"
-                        class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="/images/trabajos/proyecto-2.jpeg" />
-                    <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
-                    </div>
-                    <div
-                        class="absolute bottom-0 left-0 p-8 transform translate-y-4 group-hover:translate-y-0 transition-transform">
-                        <span class="text-primary text-xs font-bold uppercase tracking-widest">Industrial</span>
-                        <h4 class="text-xl font-black uppercase mt-1">Nave Industrial Tigre</h4>
-                    </div>
-                </div>
-                <div class="group relative overflow-hidden aspect-square">
-                    <img alt="Automatización de persiana"
-                        class="w-full h-full object-cover grayscale group-hover:grayscale-0 transition-all duration-500 scale-105 group-hover:scale-100"
-                        src="/images/trabajos/proyecto-3.jpeg" />
-                    <div class="absolute inset-0 bg-gradient-to-t from-black via-black/20 to-transparent opacity-80">
-                    </div>
-                    <div
-                        class="absolute bottom-0 left-0 p-8 transform translate-y-4 group-hover:translate-y-0 transition-transform">
-                        <span class="text-primary text-xs font-bold uppercase tracking-widest">Tecnología</span>
-                        <h4 class="text-xl font-black uppercase mt-1">Automatización Integral</h4>
-                    </div>
+            <!-- Infinite Carousel -->
+            <div class="carousel-container mt-12">
+                <div id="carousel-track" class="carousel-track">
+                    <!-- Images will be injected here by main.js -->
                 </div>
             </div>
         </div>
