Actualización de archivos y configuración de Vite

--- a/index.html
+++ b/index.html
@@ -127,51 +127,76 @@
                 <p class="text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">Ofrecemos un servicio integral para todo
                     tipo de cortinas metálicas, desde locales pequeños hasta grandes naves industriales.</p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div
-                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2">
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
                     <span class="material-icons text-5xl text-primary mb-6">bolt</span>
                     <h3 class="text-xl font-black uppercase mb-4">Reparación de Urgencia</h3>
                     <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
                         Reparamos cortinas trabadas, lamas rotas o motores quemados de forma inmediata las 24hs.
                     </p>
-                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center gap-2 group-hover:gap-4 transition-all"
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
                         href="#contacto">
                         Ver más <span class="material-icons text-sm">arrow_forward</span>
                     </a>
                 </div>
                 <div
-                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2">
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
                     <span class="material-icons text-5xl text-primary mb-6">settings_input_component</span>
                     <h3 class="text-xl font-black uppercase mb-4">Automatización</h3>
                     <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
                         Instalación de motores de última generación para mayor comodidad y seguridad en su acceso.
                     </p>
-                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center gap-2 group-hover:gap-4 transition-all"
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
                         href="#contacto">
                         Ver más <span class="material-icons text-sm">arrow_forward</span>
                     </a>
                 </div>
                 <div
-                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2">
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
                     <span class="material-icons text-5xl text-primary mb-6">build</span>
                     <h3 class="text-xl font-black uppercase mb-4">Mantenimiento</h3>
                     <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
                         Service preventivo, lubricación y ajuste para prolongar la vida útil de su persiana metálica.
                     </p>
-                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center gap-2 group-hover:gap-4 transition-all"
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
                         href="#contacto">
                         Ver más <span class="material-icons text-sm">arrow_forward</span>
                     </a>
                 </div>
                 <div
-                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2">
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
                     <span class="material-icons text-5xl text-primary mb-6">shopping_cart</span>
                     <h3 class="text-xl font-black uppercase mb-4">Venta e Instalación</h3>
                     <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
                         Fabricación a medida de cortinas metálicas de tablilla galvanizada, microperforada o malla.
                     </p>
-                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center gap-2 group-hover:gap-4 transition-all"
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
+                        href="#contacto">
+                        Ver más <span class="material-icons text-sm">arrow_forward</span>
+                    </a>
+                </div>
+                <div
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
+                    <span class="material-icons text-5xl text-primary mb-6">window</span>
+                    <h3 class="text-xl font-black uppercase mb-4">Todo tipo de Aberturas</h3>
+                    <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
+                        Instalación de cortinas en PVC, aluminio y madera para todo tipo de aberturas de su hogar o
+                        comercio.
+                    </p>
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
+                        href="#contacto">
+                        Ver más <span class="material-icons text-sm">arrow_forward</span>
+                    </a>
+                </div>
+                <div
+                    class="group bg-white dark:bg-metal-dark p-8 border-b-4 border-transparent hover:border-primary transition-all shadow-lg hover:-translate-y-2 text-center">
+                    <span class="material-icons text-5xl text-primary mb-6">apartment</span>
+                    <h3 class="text-xl font-black uppercase mb-4">Motores de Departamento</h3>
+                    <p class="text-gray-600 dark:text-gray-400 text-sm leading-relaxed mb-6">
+                        Servicio especializado en instalación de motores para cortinas residenciales y de departamentos.
+                    </p>
+                    <a class="text-xs font-black uppercase tracking-widest text-primary flex items-center justify-center gap-2 group-hover:gap-4 transition-all"
                         href="#contacto">
                         Ver más <span class="material-icons text-sm">arrow_forward</span>
                     </a>
@@ -302,79 +327,40 @@
                         Respondemos al instante.
                     </p>
                     <div class="space-y-6">
-                        <div class="flex items-center gap-4">
-                            <div class="w-12 h-12 bg-primary/10 rounded flex items-center justify-center">
-                                <span class="material-icons text-primary">phone_in_talk</span>
-                            </div>
-                            <div>
-                                <p class="text-xs font-bold text-gray-400 uppercase">Llamanos</p>
-                                <p class="font-bold">11 3856-6700 / 11 3826-5043</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center gap-4">
-                            <div class="w-12 h-12 bg-primary/10 rounded flex items-center justify-center">
-                                <span class="material-icons text-primary">mail</span>
-                            </div>
-                            <div>
-                                <p class="text-xs font-bold text-gray-400 uppercase">Email</p>
-                                <p class="font-bold">info@vpersy.com.ar</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center gap-4">
-                            <div class="w-12 h-12 bg-primary/10 rounded flex items-center justify-center">
-                                <span class="material-icons text-primary">location_on</span>
-                            </div>
-                            <div>
-                                <p class="text-xs font-bold text-gray-400 uppercase">Ubicación</p>
-                                <p class="font-bold">Vera 1082, CABA</p>
+                        <div class="space-y-6">
+                            <div class="flex items-center gap-4">
+                                <div class="w-12 h-12 bg-primary/10 rounded flex items-center justify-center">
+                                    <span class="material-icons text-primary">location_on</span>
+                                </div>
+                                <div>
+                                    <p class="text-xs font-bold text-gray-400 uppercase">Ubicación</p>
+                                    <p class="font-bold">Presidente Saenz Peña 675, CABA, ARGENTINA</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="lg:w-2/3">
                     <div class="bg-white dark:bg-accent-dark p-8 md:p-12 shadow-2xl rounded-lg">
-                        <form action="#" class="space-y-6">
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                                <div>
-                                    <label
-                                        class="block text-xs font-black uppercase tracking-widest mb-2 opacity-60">Nombre
-                                        Completo</label>
-                                    <input
-                                        class="w-full bg-gray-50 dark:bg-metal-dark border-gray-200 dark:border-gray-800 focus:border-primary focus:ring-0 rounded p-4 text-sm"
-                                        placeholder="Ej: Juan Perez" type="text" />
-                                </div>
-                                <div>
-                                    <label
-                                        class="block text-xs font-black uppercase tracking-widest mb-2 opacity-60">Teléfono</label>
-                                    <input
-                                        class="w-full bg-gray-50 dark:bg-metal-dark border-gray-200 dark:border-gray-800 focus:border-primary focus:ring-0 rounded p-4 text-sm"
-                                        placeholder="Ej: 11 1234 5678" type="tel" />
-                                </div>
-                            </div>
+                        <div class="space-y-6">
                             <div>
-                                <label class="block text-xs font-black uppercase tracking-widest mb-2 opacity-60">Tipo
-                                    de Servicio</label>
-                                <select
-                                    class="w-full bg-gray-50 dark:bg-metal-dark border-gray-200 dark:border-gray-800 focus:border-primary focus:ring-0 rounded p-4 text-sm">
-                                    <option>Reparación Urgente 24hs</option>
-                                    <option>Venta e Instalación</option>
-                                    <option>Automatización (Motor)</option>
-                                    <option>Mantenimiento</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label
-                                    class="block text-xs font-black uppercase tracking-widest mb-2 opacity-60">Mensaje</label>
-                                <textarea
+                                <label class="block text-xs font-black uppercase tracking-widest mb-2 opacity-60">Tu
+                                    Mensaje</label>
+                                <textarea id="whatsapp-message"
                                     class="w-full bg-gray-50 dark:bg-metal-dark border-gray-200 dark:border-gray-800 focus:border-primary focus:ring-0 rounded p-4 text-sm"
-                                    placeholder="Cuéntenos qué necesita..." rows="4"></textarea>
+                                    placeholder="Cuéntenos qué necesita o pida un presupuesto directamente por WhatsApp..."
+                                    rows="6"></textarea>
                             </div>
-                            <button
-                                class="w-full bg-primary hover:bg-yellow-400 text-black py-4 rounded font-black uppercase tracking-widest transition-all shadow-lg hover:shadow-primary/20"
-                                type="submit">
-                                Enviar Consulta
+                            <button id="whatsapp-btn"
+                                class="w-full bg-[#25D366] hover:bg-[#20ba5a] text-white py-4 rounded font-black uppercase tracking-widest transition-all shadow-lg flex items-center justify-center gap-3">
+                                <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
+                                    <path
+                                        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z">
+                                    </path>
+                                </svg>
+                                Enviar Consulta por WhatsApp
                             </button>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
